Tue Dec  7 22:29:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::Completion#candidate),
	  (OptionParser::Switch#compsys): remove unused variables.

Tue Dec  7 22:05:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (transcode_loop): call default handler of the given
	  hash, method, proc or [] method as fallback.  [ruby-dev:42692]

Tue Dec  7 21:59:37 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/light/node.rb: remove circular require.

Tue Dec  7 21:56:01 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_light.rb: really suppress a warning.

Tue Dec  7 21:51:57 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_light.rb: suppress a warning.

Tue Dec  7 21:14:03 2010  Tanaka Akira  <akr@fsij.org>

	* debug.c: parenthesize macro arguments.

Tue Dec  7 21:06:38 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/doctype.rb, test/rexml/test_doctype.rb: suppress warnings.
	  [ruby-core:33305]
	  Reported by Aaron Patterson. Thanks!!!

Tue Dec  7 18:56:52 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/lib/kconv.rb (String#kconv): fix typo and update rdoc.
	  patched by Kouhei Yanagita [ruby-dev:42696]

Tue Dec  7 20:32:11 2010  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/test_doctype.rb: add Accessor to test case name.

Tue Dec  7 20:31:02 2010  Kouhei Sutou  <kou@clear-code.com>

	* test/rexml/test_doctype.rb: Doctype -> DocType.

Tue Dec  7 20:29:23 2010  Kouhei Sutou  <kou@clear-code.com>

	* test/rexml/test_doctype_mixin.rb: rename to ...
	* test/rexml/test_doctype.rb: ... this to remove needless name.

Tue Dec  7 17:03:16 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (xlist): supported the XLIST command, which is an
	  extension by Apple and Google.  patch by Geoff Youngs.
	  [ruby-core:33521]

Tue Dec  7 08:00:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, win32/Makefile.sub (WERRORFLAG): flag to treat
	  warnings as errors.
