@@ -1,4 +1,7 @@
-Tue Dec  7 22:29:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Tue Dec  7 22:31:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/optparse.rb (OptionParser::Officious): separate completion
+	  options from --help.  [ruby-dev:42690]
 
 	* lib/optparse.rb (OptionParser::Completion#candidate),
 	  (OptionParser::Switch#compsys): remove unused variables.
